Fix PATH variant

--- a/.azurepipelines/build.yml
+++ b/.azurepipelines/build.yml
@@ -18,6 +18,7 @@ steps:
     performMultiLevelLookup: true
 
 - task: PowerShell@2
+  displayName: 'Build SPA'
   inputs:
     filePath: '.azurepipelines\scripts\build\pnpm.ps1'
     showWarnings: true
