--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -3,15 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/react": "^13.2.0",
-		"@types/jest": "^27.5.0",
-		"@types/node": "^17.0.31",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.3",
-		"jest-editor-support": "^30.0.2",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
-		"typescript": "^4.6.4",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -35,5 +28,14 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@tsconfig/node16": "^1.0.2",
+		"@testing-library/react": "^13.2.0",
+		"@types/jest": "^27.5.0",
+		"@types/node": "^17.0.31",
+		"@types/react": "^18.0.9",
+		"@types/react-dom": "^18.0.3",
+		"typescript": "^4.6.4"
 	}
 }
