--- a/Scyphozoa/Scyphozoa.csproj
+++ b/Scyphozoa/Scyphozoa.csproj
@@ -16,9 +16,11 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <SpaProxyServerUrl>https://localhost:44418</SpaProxyServerUrl>
+    <SpaProxyServerUrl>http://localhost:44418</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>pnpm start</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
+    <TypeScriptModuleKind>commonjs</TypeScriptModuleKind>
+    <TypeScriptJSXEmit>react</TypeScriptJSXEmit>
   </PropertyGroup>
 
   <ItemGroup>
@@ -45,7 +47,7 @@
       <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
     </Exec>
     <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js is required to build and run this project. To continue, please install Node.js from https://nodejs.org/, and then restart your command prompt or IDE." />
-    <Message Importance="high" Text="Restoring dependencies using 'npm'. This may take several minutes..." />
+    <Message Importance="high" Text="Restoring dependencies using 'pnpm'. This may take several minutes..." />
     <Exec WorkingDirectory="$(SpaRoot)" Command="pnpm install" />
   </Target>
 
@@ -56,7 +58,7 @@
 
     <!-- Include the newly-built files in the publish output -->
     <ItemGroup>
-      <DistFiles Include="$(SpaRoot)build\**" />
+      <DistFiles Include="$(SpaRoot)dist\**" />
       <ResolvedFileToPublish Include="@(DistFiles->'%(FullPath)')" Exclude="@(ResolvedFileToPublish)">
         <RelativePath>wwwroot\%(RecursiveDir)%(FileName)%(Extension)</RelativePath>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
