--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -8,7 +8,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "webpack serve --open --config webpack.dev.js",
+		"start": "webpack serve --config webpack.dev.js",
 		"build": "webpack --config webpack.prod.js"
 	},
 	"eslintConfig": {
