--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -3,8 +3,26 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@uppy/core": "^2.2.0",
+		"@uppy/xhr-upload": "^2.1.0",
+		"@wangeditor/core": "^1.0.1",
+		"@wangeditor/editor": "^5.0.1",
+		"@wangeditor/editor-for-react": "^1.0.3",
+		"dom7": "^4.0.4",
+		"is-hotkey": "^0.2.0",
+		"lodash.camelcase": "^4.3.0",
+		"lodash.clonedeep": "^4.5.0",
+		"lodash.debounce": "^4.0.8",
+		"lodash.foreach": "^4.5.0",
+		"lodash.isequal": "^4.5.0",
+		"lodash.throttle": "^4.1.1",
+		"lodash.toarray": "^4.4.0",
+		"nanoid": "^3.3.4",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"rsuite": "^5.13.0",
+		"slate": "^0.78.0",
+		"snabbdom": "^3.5.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -30,6 +48,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/runtime-corejs3": "^7.18.0",
 		"@tsconfig/node16": "^1.0.2",
 		"@types/node": "^17.0.31",
 		"@types/react": "^18.0.9",
