--- a/.azurepipelines/build.yml
+++ b/.azurepipelines/build.yml
@@ -34,11 +34,10 @@ steps:
     custom: 'tool'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Initial Create Database'
+  displayName: 'Test Database Initilization'
   inputs:
     command: 'custom'
-    projects: 'Scyphozoa'
-    arguments: 'database update InitialCreate'
+    arguments: 'database update InitialCreate --project Scyphozoa'
     custom: 'ef'
 
 - task: PowerShell@2
