--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -20,6 +20,7 @@
 		"nanoid": "^3.3.4",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-router-dom": "6",
 		"rsuite": "^5.13.0",
 		"slate": "^0.78.0",
 		"snabbdom": "^3.5.0",
