--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -21,6 +21,7 @@
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-router-dom": "6",
+		"redux": "^4.2.0",
 		"rsuite": "^5.13.0",
 		"slate": "^0.78.0",
 		"snabbdom": "^3.5.0",
