--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -28,8 +28,9 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "webpack serve --config webpack.dev.js",
-		"build": "webpack --config webpack.prod.js"
+		"start": "webpack serve --config webpack.dev.js --color --progress",
+		"debug" : "webpack serve --config webpack.dev.js --color --progress --open",
+		"build": "webpack --config webpack.prod.js --color --progress"
 	},
 	"eslintConfig": {
 		"extends": [
