--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -3,11 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@uppy/core": "^2.2.0",
-		"@uppy/xhr-upload": "^2.1.0",
-		"@wangeditor/core": "^1.0.1",
-		"@wangeditor/editor": "^5.0.1",
-		"@wangeditor/editor-for-react": "^1.0.3",
+		"@rsuite/icons": "^1.0.2",
+		"@uppy/core": "^2.3.1",
+		"@uppy/xhr-upload": "^2.1.2",
+		"@wangeditor/core": "^1.1.1",
+		"@wangeditor/editor": "^5.1.1",
+		"@wangeditor/editor-for-react": "^1.0.4",
 		"dom7": "^4.0.4",
 		"is-hotkey": "^0.2.0",
 		"lodash.camelcase": "^4.3.0",
@@ -18,18 +19,18 @@
 		"lodash.throttle": "^4.1.1",
 		"lodash.toarray": "^4.4.0",
 		"nanoid": "^3.3.4",
-		"react": "^18.1.0",
-		"react-dom": "^18.1.0",
-		"react-router-dom": "6",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.3.0",
 		"redux": "^4.2.0",
-		"rsuite": "^5.13.0",
+		"rsuite": "^5.15.1",
 		"slate": "^0.78.0",
-		"snabbdom": "^3.5.0",
+		"snabbdom": "^3.5.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
 		"start": "webpack serve --config webpack.dev.js --color --progress",
-		"debug" : "webpack serve --config webpack.dev.js --color --progress --open",
+		"debug": "webpack serve --config webpack.dev.js --color --progress --open",
 		"build": "webpack --config webpack.prod.js --color --progress"
 	},
 	"eslintConfig": {
@@ -51,22 +52,25 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/runtime-corejs3": "^7.18.0",
-		"@tsconfig/node16": "^1.0.2",
-		"@types/node": "^17.0.31",
-		"@types/react": "^18.0.9",
-		"@types/react-dom": "^18.0.3",
+		"@babel/runtime-corejs3": "^7.18.6",
+		"@tsconfig/node16": "^1.0.3",
+		"@types/node": "^17.0.45",
+		"@types/react": "^18.0.14",
+		"@types/react-dom": "^18.0.5",
 		"css-loader": "^6.7.1",
 		"csv-loader": "^3.0.3",
 		"express": "^4.18.1",
+		"fibers": "^5.0.1",
 		"html-webpack-plugin": "^5.5.0",
+		"sass": "^1.53.0",
+		"sass-loader": "^13.0.2",
 		"style-loader": "^3.3.1",
-		"ts-loader": "^9.3.0",
-		"typescript": "^4.6.4",
-		"webpack": "^5.72.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-middleware": "^5.3.1",
-		"webpack-dev-server": "^4.9.0",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-middleware": "^5.3.3",
+		"webpack-dev-server": "^4.9.2",
 		"webpack-merge": "^5.8.0",
 		"xml-loader": "^1.2.1"
 	}
