--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -11,6 +11,7 @@
 		"@wangeditor/editor-for-react": "^1.0.4",
 		"dom7": "^4.0.4",
 		"is-hotkey": "^0.2.0",
+		"lodash": "^4.17.21",
 		"lodash.camelcase": "^4.3.0",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.debounce": "^4.0.8",
