--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -3,12 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@reduxjs/toolkit": "^1.8.3",
+		"@reduxjs/toolkit": "^1.8.4",
 		"@rsuite/icons": "^1.0.2",
-		"@uppy/core": "^2.3.1",
+		"@uppy/core": "^2.3.2",
 		"@uppy/xhr-upload": "^2.1.2",
-		"@wangeditor/core": "^1.1.9",
-		"@wangeditor/editor": "^5.1.12",
+		"@wangeditor/core": "^1.1.11",
+		"@wangeditor/editor": "^5.1.14",
 		"@wangeditor/editor-for-react": "^1.0.4",
 		"dom7": "^4.0.4",
 		"is-hotkey": "^0.2.0",
@@ -23,9 +23,10 @@
 		"nanoid": "^3.3.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-markdown": "^8.0.3",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
-		"rsuite": "^5.16.1",
+		"rsuite": "^5.16.4",
 		"slate": "^0.78.0",
 		"snabbdom": "^3.5.1",
 		"web-vitals": "^2.1.4"
@@ -57,21 +58,21 @@
 		"@babel/runtime-corejs3": "^7.18.9",
 		"@tsconfig/node16": "^1.0.3",
 		"@types/node": "^17.0.45",
-		"@types/react": "^18.0.15",
+		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"css-loader": "^6.7.1",
 		"csv-loader": "^3.0.5",
 		"express": "^4.18.1",
 		"html-webpack-plugin": "^5.5.0",
-		"sass": "^1.54.0",
+		"sass": "^1.54.4",
 		"sass-loader": "^13.0.2",
 		"style-loader": "^3.3.1",
 		"ts-loader": "^9.3.1",
 		"typescript": "^4.7.4",
-		"webpack": "^5.73.0",
+		"webpack": "^5.74.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-middleware": "^5.3.3",
-		"webpack-dev-server": "^4.9.3",
+		"webpack-dev-server": "^4.10.0",
 		"webpack-merge": "^5.8.0",
 		"xml-loader": "^1.2.1"
 	}
