--- a/Scyphozoa/ClientApp/package.json
+++ b/Scyphozoa/ClientApp/package.json
@@ -10,6 +10,7 @@
 		"@wangeditor/core": "^1.1.11",
 		"@wangeditor/editor": "^5.1.14",
 		"@wangeditor/editor-for-react": "^1.0.4",
+		"axios": "^0.27.2",
 		"dom7": "^4.0.4",
 		"is-hotkey": "^0.2.0",
 		"lodash": "^4.17.21",
@@ -26,6 +27,8 @@
 		"react-markdown": "^8.0.3",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
+		"redux": "^4.2.0",
+		"redux-thunk": "^2.4.1",
 		"rsuite": "^5.16.4",
 		"slate": "^0.78.0",
 		"snabbdom": "^3.5.1",
